add JavaScript to keep money in the right format at all times

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-$finger-size: 48px;
+$finger-size: 55px;
 $text: #353938;
 $light: #d5d1d5;
 $active: #d4e5e6;
@@ -18,6 +18,8 @@ html {
 body {
   margin: 0 auto;
 }
+
+//Transaction Type
 
 .type {
   height: $finger-size * 4;
@@ -39,3 +41,29 @@ body {
     background: $active;
   }
 }
+
+//Calculator
+
+.calculator {
+  margin: $finger-size / 10 auto;
+  .amount {
+    text-align: right;
+    font-size: 1.8rem;
+    width: 85%;
+    height: $finger-size;
+    margin: 0 0 0 $finger-size / 10;
+    vertical-align: top;
+  }
+  .add {
+    background: $active;
+    color: $text;
+    border: 0px;
+    font-size: 1.8rem;
+    height: $finger-size;
+    width: $finger-size;
+    margin: 0 auto;
+    vertical-align: top;
+  }
+}
+
+//Histor
