--- a/css/main.css
+++ b/css/main.css
@@ -12,18 +12,37 @@ body {
   margin: 0 auto; }
 
 .type {
-  height: 192px;
+  height: 220px;
   overflow-y: scroll; }
   .type div {
     width: 100%;
-    height: 48px;
+    height: 55px;
     background: #d5d1d5;
     color: #353938;
     border-bottom: 1px solid #a49ca4;
     text-align: center;
-    padding: 16px; }
+    padding: 18.33333px; }
     .type div:hover {
       background: #c9c4c9; }
   .type div.active {
     color: #353938;
     background: #d4e5e6; }
+
+.calculator {
+  margin: 5.5px auto; }
+  .calculator .amount {
+    text-align: right;
+    font-size: 1.8rem;
+    width: 85%;
+    height: 55px;
+    margin: 0 0 0 5.5px;
+    vertical-align: top; }
+  .calculator .add {
+    background: #d4e5e6;
+    color: #353938;
+    border: 0px;
+    font-size: 1.8rem;
+    height: 55px;
+    width: 55px;
+    margin: 0 auto;
+    vertical-align: top; }
