--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,10 @@ body {
   height: 220px;
   overflow-y: scroll; }
   .type div {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     width: 100%;
     height: 55px;
     background: #d5d1d5;
@@ -28,6 +32,7 @@ body {
     text-align: center;
     padding: 18.33333px; }
     .type div:hover {
+      cursor: pointer;
       background: #c9c4c9; }
   .type div.active {
     color: #353938;
@@ -43,6 +48,11 @@ body {
     margin: 0 0 0 5.5px;
     vertical-align: top; }
   .calculator .add {
+    outline: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     background: #d4e5e6;
     color: #353938;
     border: 0px;
@@ -51,3 +61,8 @@ body {
     width: 55px;
     margin: 0 auto;
     vertical-align: top; }
+    .calculator .add:hover {
+      cursor: pointer;
+      background: #c4dbdd; }
+    .calculator .add:active {
+      background: #c4dbdd; }
