--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ html {
   letter-spacing: .1rem; }
 
 body {
+  background: #cbc6cb;
   margin: 0 auto; }
 
 .type {
@@ -26,9 +27,10 @@ body {
     user-select: none;
     width: 100%;
     height: 55px;
-    background: #d5d1d5;
     color: #353938;
-    border-bottom: 1px solid #a49ca4;
+    background: #d5d1d5;
+    border-top: 1px solid #edeced;
+    border-bottom: 1px solid #bdb6bd;
     text-align: center;
     padding: 18.33333px; }
     .type div:hover {
@@ -39,15 +41,18 @@ body {
     background: #d4e5e6; }
 
 .calculator {
+  text-align: center;
   margin: 5.5px auto; }
   .calculator .amount {
     text-align: right;
     font-size: 1.8rem;
-    width: 85%;
+    width: 70%;
     height: 55px;
     margin: 0 0 0 5.5px;
-    vertical-align: top; }
+    vertical-align: top;
+    display: inline-block; }
   .calculator .add {
+    display: inline-block;
     outline: none;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -59,10 +64,58 @@ body {
     font-size: 1.8rem;
     height: 55px;
     width: 55px;
+    border-radius: 55px;
     margin: 0 auto;
-    vertical-align: top; }
+    padding: 0 0 5px 0;
+    vertical-align: top;
+    text-align: center; }
     .calculator .add:hover {
       cursor: pointer;
       background: #c4dbdd; }
     .calculator .add:active {
       background: #c4dbdd; }
+
+.history .entry {
+  position: relative;
+  background: #d5d1d5;
+  border-top: 1px solid #edeced;
+  border-bottom: 1px solid #bdb6bd;
+  width: 100%; }
+  .history .entry .date {
+    width: 25%;
+    font-size: 11px;
+    display: inline-block;
+    padding: 5px; }
+  .history .entry .label {
+    width: 30%;
+    font-size: .8rem;
+    display: inline-block; }
+    .history .entry .label span {
+      display: block;
+      background: #d4e5e6;
+      width: 95px !important;
+      padding: 10px 5px;
+      border-radius: 5px;
+      text-align: center; }
+  .history .entry input {
+    width: 30%;
+    height: 55px;
+    background: #d5d1d5;
+    border: 0px;
+    font-size: 1.2rem;
+    display: inline-block;
+    text-align: right; }
+  .history .entry .remove {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    border: 0px;
+    font-size: 1.2rem;
+    width: 41.25px;
+    height: 41.25px;
+    border-radius: 41.25px;
+    color: #353938;
+    background: #e1dee1; }
+    .history .entry .remove:hover {
+      cursor: pointer;
+      background: #edeced; }
