--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -16,3 +16,21 @@ body {
   background: darken($light, 4%);
   margin: 0 auto;
 }
+
+
+
+.hidden{
+    display:none;
+}
+
+#sync-error, #sync-success {
+  display: none;
+}
+
+[data-sync-state=syncing] #sync-success {
+  display: block;
+}
+
+[data-sync-state=error] #sync-error {
+  display: block;
+}
