--- a/scss/_history.scss
+++ b/scss/_history.scss
@@ -1,7 +1,10 @@
 //  History
 
-.history {
-  .entry {
+#history-list {
+  margin: 0 auto; 
+  padding: 0;
+  li {
+    list-style-type: none;
     position: relative;
     background: $light;
     border-top: 1px solid lighten($light, 10%);
