--- a/scss/_input.scss
+++ b/scss/_input.scss
@@ -3,7 +3,7 @@
 .calculator {
   text-align: center;
   margin: $finger-size / 10 auto;
-  .amount {
+  #amount {
     text-align: right;
     font-size: 1.8rem;
     width: 70%;
@@ -12,7 +12,7 @@
     vertical-align: top;
     display: inline-block;
   }
-  .add {
+  #add {
     display: inline-block;
     outline: none;
     @include user-select(none);
